// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useGeolocation should return empty values by default 1`] = `
Array [
  <div>
    Trying to fetch location...
  </div>,
  <br />,
  <code>
    latitude: 
    <br />
    longitude: 
    <br />
    timestamp: 
    <br />
    accuracy: 
    <br />
    error: 
  </code>,
]
`;

exports[`useGeolocation should return empty values by default in watching mode 1`] = `
<code>
  latitude: 
  <br />
  longitude: 
  <br />
  timestamp: 
  <br />
  accuracy: 
  <br />
  error: 
  Geolocation is not supported
</code>
`;

exports[`useGeolocation should return error if navigator is not supported 1`] = `
<code>
  latitude: 
  <br />
  longitude: 
  <br />
  timestamp: 
  <br />
  accuracy: 
  <br />
  error: 
  Geolocation is not supported
</code>
`;

exports[`useGeolocation should return error while fetching 1`] = `
<code>
  latitude: 
  <br />
  longitude: 
  <br />
  timestamp: 
  <br />
  accuracy: 
  <br />
  error: 
  User denied Geolocation
</code>
`;

exports[`useGeolocation should return error while watching 1`] = `
<code>
  latitude: 
  <br />
  longitude: 
  <br />
  timestamp: 
  <br />
  accuracy: 
  <br />
  error: 
  User denied Geolocation
</code>
`;

exports[`useGeolocation should return latitude and longitude even if watch is undefined 1`] = `
<code>
  latitude: 
  52.3172414
  <br />
  longitude: 
  4.8717809
  <br />
  timestamp: 
  1561815013194
  <br />
  accuracy: 
  24m
  <br />
  error: 
</code>
`;

exports[`useGeolocation should return latitude and longitude while fetching 1`] = `
<code>
  latitude: 
  52.3172414
  <br />
  longitude: 
  4.8717809
  <br />
  timestamp: 
  1561815013194
  <br />
  accuracy: 
  24m
  <br />
  error: 
</code>
`;

exports[`useGeolocation should return latitude and longitude while watching 1`] = `
<code>
  latitude: 
  52.3172414
  <br />
  longitude: 
  4.8717809
  <br />
  timestamp: 
  1561815013194
  <br />
  accuracy: 
  24m
  <br />
  error: 
</code>
`;
